--- a/src/components/Footer/footer-nav.scss
+++ b/src/components/Footer/footer-nav.scss
@@ -3,12 +3,16 @@
 .nav {
     position: relative;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    width: 50%;
-    height: 40%;
     border-bottom: 3px solid var(--color-red);
-    margin-bottom: 80px;
+    margin: 0 16px;
+    padding: 3rem 0;
+
+    @include media-query($medium-up) {
+        width: 60%;
+    }
 
     &__items {
         font-family: var(--montserrat);
@@ -18,6 +22,10 @@
         letter-spacing: 2.22px;
         text-align: left;
         text-transform: uppercase;
-        margin: 24px 50px;
+        margin: 16px 16px;
+
+        @include media-query($medium-up) {
+            margin: 16px 32px;
+        }
     }
 }
