--- a/src/components/Contacts/form.scss
+++ b/src/components/Contacts/form.scss
@@ -28,6 +28,7 @@
             }
         }
         button {
+            outline: none;
             width: 100%;
             height: 58px;
             border: none;
@@ -37,6 +38,20 @@
             font-weight: 800;
             letter-spacing: 1.1px;
             margin-top: 56px;
+            transition: all 250ms ease-in-out;
+            cursor: pointer;
+        }
+        button:hover {
+            border: 1px solid var(--color-red);
+            color: var(--color-black);
+            background-color: var(--color-white);
         }
     }
+}
+
+.error {
+    color: var(--color-red);
+    font-size: 12px;
+    padding-left: 6px;
+    margin-top: 2px;
 }
