--- a/src/components/Contacts/form.scss
+++ b/src/components/Contacts/form.scss
@@ -20,11 +20,13 @@
             input {
                 height: 58px;
                 padding-left: 4px;
+                outline: none;
             }
 
             textarea {
                 resize: none;
                 padding-left: 4px;
+                outline: none;
             }
         }
         button {
