--- a/src/components/Contacts/form.scss
+++ b/src/components/Contacts/form.scss
@@ -29,25 +29,6 @@
                 outline: none;
             }
         }
-        button {
-            outline: none;
-            width: 100%;
-            height: 58px;
-            border: none;
-            background-color: var(--color-black);
-            color: var(--color-red);
-            text-transform: uppercase;
-            font-weight: 800;
-            letter-spacing: 1.1px;
-            margin-top: 56px;
-            transition: all 250ms ease-in-out;
-            cursor: pointer;
-        }
-        button:hover {
-            border: 1px solid var(--color-red);
-            color: var(--color-black);
-            background-color: var(--color-white);
-        }
     }
 }
 
@@ -56,4 +37,24 @@
     font-size: 12px;
     padding-left: 6px;
     margin-top: 2px;
+}
+
+.button {
+    outline: none;
+    width: 100%;
+    height: 58px;
+    border: none;
+    background-color: var(--color-black);
+    color: var(--color-red);
+    text-transform: uppercase;
+    font-weight: 800;
+    letter-spacing: 1.1px;
+    margin-top: 56px;
+    transition: all 250ms ease-in-out;
+    cursor: pointer;
+}
+.button:hover {
+    border: 1px solid var(--color-red);
+    color: var(--color-black);
+    background-color: var(--color-white);
 }
