--- a/src/components/Articles/article.scss
+++ b/src/components/Articles/article.scss
@@ -16,20 +16,25 @@
     }
 }
 
-p {
-    margin: 8px 6px;
-}
-
 .article {
-    margin: 5rem;
+    margin: 4rem 1rem;
+
+    @include media-query($medium-up) {
+        margin: 5rem;
+    }
+
     .linkWrap {
         h1 {
             font-size: 36px;
             color: var(--color-black);
-            margin: 8px 0;
+            margin: 24px 0;
+            @include media-query($medium-up) {
+                margin: 8px 0;
+            }
         }
 
         p {
+            margin: 0;
             font-size: 16px;
             color: var(--color-n5);
         }
@@ -37,6 +42,7 @@ p {
 
     .info {
         display: flex;
+
         .author {
             font-size: 14px;
             margin-right: 12px;
