--- a/src/components/Header/header-nav.scss
+++ b/src/components/Header/header-nav.scss
@@ -3,35 +3,36 @@
 .nav {
     position: relative;
 
-        @include media-query($medium-down) {
-            position: fixed;
-                top: 0;
-                left: 0;
-            width: 100vw;
-            height: 100vh;
-            background: rgba(var(--color-white),0.6);
-            pointer-events: none;
-            padding: 24px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            backdrop-filter: blur(10px);
-            z-index: 9;
-            opacity: 0;
+    @include media-query($medium-down) {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background: rgba(var(--color-white), 0.6);
+        pointer-events: none;
+        padding: 24px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        backdrop-filter: blur(10px);
+        z-index: 9;
+        opacity: 0;
 
-            &.open {
-                pointer-events: auto;
-            }
-        }
-
-        @include media-query($large-up) {
-            grid-column: 2/3;
-            place-self: center;
+        &.open {
             pointer-events: auto;
         }
+    }
+
+    @include media-query($large-up) {
+        grid-column: 2/3;
+        place-self: center;
+        pointer-events: auto;
+    }
 
     &__item {
+        position: relative;
         font-family: var(--montserrat);
         font-weight: 700;
         font-size: 14px;
@@ -40,5 +41,36 @@
         text-align: left;
         text-transform: uppercase;
         margin: 24px;
+
+        &::before {
+            content: '';
+            position: absolute;
+            width: 0%;
+            height: 58%;
+            bottom: 2px;
+            left: -5%;
+            background-color: #e67b8e;
+            z-index: -1;
+            transition: all 350ms ease-in-out;
+        }
+
+        &:hover::before {
+            width: 110%;
+        }
+    }
+}
+
+.active {
+    position: relative;
+
+    &::before {
+        content: '';
+        position: absolute;
+        width: 110%;
+        height: 58%;
+        bottom: 2px;
+        left: -5%;
+        background-color: #e67b8e;
+        z-index: -1;
     }
 }
