--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -4,9 +4,8 @@
     position: fixed;
     width: 100%;
     height: 72px;
-    background: var(--color-white);
-    box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.2);
     z-index: 99;
+    transition: all 300ms ease-in-out;
 
     @include media-query($large-up) {
         background: none;
