--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -121,3 +121,8 @@ body {
 :global(.tl-edges) {
     overflow: hidden;
 }
+
+:glabal(.mobilenav) {
+    background: var(--color-white);
+    box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.2);
+}
